--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                               I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of <a href="https://subhadeepkoley.github.io//">Subhadeep Koley</a> and <a href="https://www.surrey.ac.uk/people/yi-zhe-song">Professor Yi-Zhe Song</a>.
                            </p>
                            <p align="justify">
-                              I'm also a Data Scientist at <a href="https://www.nhs.uk/">National Health Service</a> <a href="https://www.epsom-sthelier.nhs.uk/swleoc//">SWLEOC</a>, while collaborating with <a href="https://bagcilab.com/">Bagci Lab</a> and <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a> on various research projects.
+                              I'm also a Data Scientist at <a href="https://www.nhs.uk/">National Health Service</a>, <a href="https://www.epsom-sthelier.nhs.uk/swleoc//">SWLEOC</a>, while collaborating with <a href="https://bagcilab.com/">Bagci Lab</a> and <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a> on various research projects.
                            </p>
 
                            <p align="justify">
