--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                            </p>
 
                            <p align="justify">
-                           Prior to this, I worked as a Deep Learning Engineer, specializing in Langchain, Retrieval-Augmented Generation, PDF Parsing.
+                           Prior to this, I worked as a Deep Learning Engineer at 2SigmaSchool, specializing in Langchain, Retrieval-Augmented Generation, PDF Parsing; 
                            <p>
                            <p align="justify">
-                           Prior to that, I was involved in research in <a href="https://opencv.org/">OpenCV</a> and Multi-national AI & Research (US, UK, France, Germany, Japan and India).
+                           Prior to that, I was involved in research in <a href="https://learnopencv.com//">LearnOpenCV</a> and Multi-national AI & Research (US(Bagci lab, 2SigmaSchool), UK(NHS, SketchX), France(INRIA, STARS), Germany(BitsCrunch), Japan(VIVEN) and India(NIT Surat, IIT Hydrabad)).
                            <p>
                         </td>
                         <td style="width:40%">
