--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                            Prior to this, I worked as a Deep Learning Engineer at 2SigmaSchool, specializing in Langchain, Retrieval-Augmented Generation, PDF Parsing; 
                            <p>
                            <p align="justify">
-                           Prior to that, I was involved in research in <a href="https://learnopencv.com//">LearnOpenCV</a> and Multi-national AI & Research (US(Bagci lab, 2SigmaSchool), UK(NHS, SketchX), France(INRIA, STARS), Germany(BitsCrunch), Japan(VIVEN) and India(NIT Surat, IIT Hydrabad)).
+                           Prior to that, I was involved in research in <a href="https://learnopencv.com//">LearnOpenCV</a> and Multi-national AI & Research US(Bagci lab, 2SigmaSchool), UK(NHS, SketchX), France(INRIA, STARS team), Germany(BitsCrunch), Japan(VIVEN) and India(NIT Surat, IIT Hydrabad).
                            <p>
                         </td>
                         <td style="width:40%">
