--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                            </heading>
                            <p align="justify">
                               <font size="3">
-                                 My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.
+                                 My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray, and sketch understanding with foundation models.
                            </p>
                         </td>
                      </tr>
