--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                            Prior to this, I worked as a Deep Learning Engineer at 2SigmaSchool, specializing in Langchain, Retrieval-Augmented Generation, PDF Parsing; 
                            <p>
                            <p align="justify">
-                           Prior to that, I was involved in research in <a href="https://learnopencv.com//">LearnOpenCV</a> and Multi-national AI & Research US(Bagci lab, 2SigmaSchool), UK(National Health Service, SketchX), France(INRIA, Spatio-Temporal Activity Recognition Systems (STARS) team), Germany(BitsCrunch), Japan(VIVEN) and India(Malaviya National Institute of Technology Jaipur, Indian Institute of Technology Hyderabad).
+                           Alongside, I have held research and engineering positions at LearnOpenCV and several multinational AI and research institutions, including Bagci Lab and 2SigmaSchool (US), the National Health Service and SketchX (UK), INRIA's STARS team (France), BitsCrunch (Germany), VIVEN (Japan), and Malaviya National Institute of Technology Jaipur and IIT Hyderabad (India).
+                              
+                              Prior to that, I was involved in research in <a href="https://learnopencv.com//">LearnOpenCV</a> and Multi-national AI & Research US(Bagci lab, 2SigmaSchool), UK(National Health Service, SketchX), France(INRIA, Spatio-Temporal Activity Recognition Systems (STARS) team), Germany(BitsCrunch), Japan(VIVEN) and India(Malaviya National Institute of Technology Jaipur, Indian Institute of Technology Hyderabad).
                            <p>
                         </td>
                         <td style="width:40%">
