--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                            Prior to this, I worked as a Deep Learning Engineer at 2SigmaSchool, specializing in Langchain, Retrieval-Augmented Generation, PDF Parsing; 
                            <p>
                            <p align="justify">
-                           Alongside, I have held research and engineering positions at LearnOpenCV BitsCrunch (Germany), VIVEN (Japan), and Malaviya National Institute of Technology Jaipur and IIT Hyderabad (India).
+                           Alongside, I have held research and engineering positions at <a href="https://learnopencv.com/">LearnOpenCV</a>,  <a href="https://blog.bitscrunch.com/">BitsCrunch</a>, <a href="https://www.crunchbase.com/organization/viven/">VIVEN</a>,  <a href="https://mnit.ac.in/">Malaviya National Institute of Technology Jaipur </a> and <a href="https://www.iith.ac.in/">Indian Institute of Technology, Hyderabad</a>.
                               
                               
                            <p>
