--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                            </heading>
                            <p align="justify">
                               <font size="3">
-                                 My research focuses on Deep Learning, with expertise in Medical Imaging, Foundation Models, and Generative AI. I have worked on AI-driven diagnostic tools, X-ray analysis, and sketch understanding, leveraging foundation models and fine-tuning techniques such as LoRA. Additionally, I specialize in advanced GAN-based augmentation and have applied AI to NFT fraud detection and price estimation, enhancing security and valuation in digital assets.
+                                 I specialize in Deep Learning, focusing on Medical Imaging, Foundation Models, and Generative AI. My work includes AI-driven diagnostics, X-ray analysis, sketch understanding, GAN-based augmentation, and AI applications in NFT fraud detection and valuation.
                            </p>
                         </td>
                      </tr>
