--- a/index.html
+++ b/index.html
@@ -95,6 +95,40 @@
                      </tr>
                   </tbody>
                </table>
+
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/CVPR_2025.jpg' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="">
+                           <papertitle>SketchFusion: Learning Universal Sketch Features through Fusing Foundation Models
+                           </papertitle> <a class="button" style="color:#FFFFFF"><strong style="font-size:12px"> New!
+                              </strong></a>
+                        </a>
+                        <br>
+                        S.Koley, <strong>T. K. Dutta</strong>, S. Majhi, D. R. Nayak, D. Jha
+                        <br>
+                        <em>In Proc. IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR)  <strong>( CVPR
+                              )</strong>, 2025</em>
+                        <br>
+                        <a href="">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="">[arXiv]</a>
+                        /
+                        <a href="">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
+   
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
                   <tbody>
@@ -225,6 +259,8 @@
                      </td>
                   </tbody>
                </table>
+
+   
    
 
                
