--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                               </strong></a>
                         </a>
                         <br>
-                        S.Koley, <strong>T. K. Dutta</strong>, S. Majhi, D. R. Nayak, D. Jha
+                        S.Koley, <strong>T. K. Dutta</strong>, PN. Chowdhury, AK. Bhunia, Y-Z. Song
                         <br>
                         <em>In Proc. IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR)  <strong>( CVPR
                               )</strong>, 2025</em>
