--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <br>
                         S.Koley, <strong>T. K. Dutta</strong>, PN. Chowdhury, AK. Bhunia, Y-Z. Song
                         <br>
-                        <em>In Proc. IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR)  <strong>( CVPR
+                        <em>In Proc. IEEE / CVF Computer Vision and Pattern Recognition Conference <strong>( CVPR
                               )</strong>, 2025</em>
                         <br>
                         <a href="">[PDF]</a>
