--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -97,12 +96,10 @@
                </table>
 
                  <table
-              style="width:85%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:20px;">
               <tbody>
                 <tr>
-                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:justify">
-                    <p>
-                    </p>
+                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:left;padding-left:40px;">
                     <heading>
                       <font size="5">2025</font>
                     </heading>
@@ -112,7 +109,7 @@
             </table>
    
                <table
-                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff;margin-bottom:40px;">
                   <tbody>
                      <td align="middle">
                         <img src='images/CVPR_2025.jpg' width="160">
@@ -145,7 +142,7 @@
                </table>
    
                <table
-                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff;margin-bottom:60px;">
                   <tbody>
                      <td align="middle">
                         <img src='images/SAM_Mamba.png' width="160">
@@ -179,12 +176,10 @@
 
 
                  <table
-              style="width:85%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:20px;">
               <tbody>
                 <tr>
-                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:justify">
-                    <p>
-                    </p>
+                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:left;padding-left:40px;">
                     <heading>
                       <font size="5">2024</font>
                     </heading>
@@ -194,7 +189,7 @@
             </table>
    
                <table
-                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff;margin-bottom:40px;">
                   <tbody>
                      <td align="middle">
                         <img src='images/GT-Net.png' width="160">
@@ -227,7 +222,7 @@
 
    
                <table
-                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff;margin-bottom:60px;">
                   <tbody>
                      <td align="middle">
                         <img src='images/ARMNet1.png' width="160">
@@ -259,12 +254,10 @@
 
    
                  <table
-              style="width:85%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:20px;">
               <tbody>
                 <tr>
-                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:justify">
-                    <p>
-                    </p>
+                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:left;padding-left:40px;">
                     <heading>
                       <font size="5">2022</font>
                     </heading>
@@ -275,7 +268,7 @@
    
    
                <table
-                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff;margin-bottom:40px;">
                   <tbody>
                      <td align="middle">
                         <img src='images/CDANet.png' width="160">
@@ -304,11 +297,6 @@
                      </td>
                   </tbody>
                </table>
-
-   
-   
-
-               
             </td>
          </tr>
       </tbody>
