--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                               </strong></a>
                         </a>
                         <br>
-                        S.Koley, <strong>T. K. Dutta</strong>, A. Sain, PN. Chowdhury, AK. Bhunia, Y-Z. Song
+                        S.Koley, <strong>T. K. Dutta</strong>, A. Sain, P.N. Chowdhury, A.K. Bhunia, Y-Z. Song
                         <br>
                         <em>In Proc. IEEE / CVF Computer Vision and Pattern Recognition Conference <strong>( CVPR
                               )</strong>, 2025</em>
