--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
                         /
                         <a href="">[arXiv]</a>
                         /
-                        <a href="">[Project Page]</a>
+                        <a href="">[Code]</a>
                         /
-                        <a href="">[Video]</a>
                         <br>
                      </td>
                   </tbody>
@@ -166,9 +165,8 @@
                         /
                         <a href="https://arxiv.org/abs/2412.08482">[arXiv]</a>
                         /
-                        <a href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[Project Page]</a>
+                        <a href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[Code]</a>
                         /
-                        <a href="">[Video]</a>
                         <br>
                      </td>
                   </tbody>
@@ -211,9 +209,8 @@
                         /
                         <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[arXiv]</a>
                         /
-                        <a href="https://github.com/TapasKumarDutta1/GT-Net">[Project Page]</a>
+                        <a href="https://github.com/TapasKumarDutta1/GT-Net">[Code]</a>
                         /
-                        <a href="">[Video]</a>
                         <br>
                      </td>
                   </tbody>
@@ -244,9 +241,8 @@
                         /
                         <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[arXiv]</a>
                         /
-                        <a href="https://github.com/TapasKumarDutta1/ARM-Net">[Project Page]</a>
+                        <a href="https://github.com/TapasKumarDutta1/ARM-Net">[Code]</a>
                         /
-                        <a href="">[Video]</a>
                         <br>
                      </td>
                   </tbody>
@@ -290,9 +286,8 @@
                         /
                         <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[arXiv]</a>
                         /
-                        <a href="https://github.com/TapasKumarDutta1/CDANet">[Project Page]</a>
+                        <a href="https://github.com/TapasKumarDutta1/CDANet">[Code]</a>
                         /
-                        <a href="">[Video]</a>
                         <br>
                      </td>
                   </tbody>
