--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[PDF]</a>
                         /
                         <a
-                           href="">[BibTeX]</a>
+                           href="https://raw.githubusercontent.com/TapasKumarDutta1/TapasKumarDutta1.github.io/main/data/icip.bib">[BibTeX]</a>
                         /
                         <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[arXiv]</a>
                         /
