--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[PDF]</a>
                         /
                         <a
-                           href="">[BibTeX]</a>
+                           href="https://raw.githubusercontent.com/TapasKumarDutta1/TapasKumarDutta1.github.io/main/data/armnet.bib">[BibTeX]</a>
                         /
                         <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[arXiv]</a>
                         /
