--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <a href="https://arxiv.org/abs/2412.08482">[PDF]</a>
                         /
                         <a
-                           href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[BibTeX]</a>
+                           href="https://raw.githubusercontent.com/TapasKumarDutta1/TapasKumarDutta1.github.io/main/data/sam_mamba.bib">[BibTeX]</a>
                         /
                         <a href="https://arxiv.org/abs/2412.08482">[arXiv]</a>
                         /
@@ -205,7 +205,7 @@
                         <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[PDF]</a>
                         /
                         <a
-                           href="">[BibTeX]</a>
+                           href="https://raw.githubusercontent.com/TapasKumarDutta1/TapasKumarDutta1.github.io/main/data/gtnet.bib">[BibTeX]</a>
                         /
                         <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[arXiv]</a>
                         /
