--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
                         <em>In Proc. IEEE / CVF Computer Vision and Pattern Recognition Conference <strong>( CVPR
                               )</strong>, 2025</em>
                         <br>
-                        <a href="">[PDF]</a>
+                        <a href="https://arxiv.org/pdf/2503.14129">[PDF]</a>
                         /
                         <a
-                           href="">[BibTeX]</a>
+                           href="https://github.com/TapasKumarDutta1/TapasKumarDutta1.github.io/blob/main/data/sketchfusion.bib">[BibTeX]</a>
                         /
-                        <a href="">[arXiv]</a>
+                        <a href="https://arxiv.org/pdf/2503.14129">[arXiv]</a>
                         /
-                        <a href="">[Code]</a>
+                        <a href="https://github.com/TapasKumarDutta1/SketchFusion">[Code]</a>
                         /
                         <br>
                      </td>
@@ -158,7 +158,7 @@
                         <em>In Proc. IEEE/CVF Winter Conference on Applications of Computer Vision <strong>( WACV
                               )</strong>, 2025</em>
                         <br>
-                        <a href="https://arxiv.org/abs/2412.08482">[PDF]</a>
+                        <a href="https://openaccess.thecvf.com/content/WACV2025/papers/Dutta_SAM-Mamba_Mamba_Guided_SAM_Architecture_for_Generalized_Zero-Shot_Polyp_Segmentation_WACV_2025_paper.pdf">[PDF]</a>
                         /
                         <a
                            href="https://raw.githubusercontent.com/TapasKumarDutta1/TapasKumarDutta1.github.io/main/data/sam_mamba.bib">[BibTeX]</a>
