--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <br>
                         <strong>T. K. Dutta</strong>, D. R. Nayak, R.M. Pachori
                         <br>
-                        <em>In Biomedical Engineering Letters, 2024</em>
+                        <em>Biomedical Engineering Letters, vol. 14, no. 5, pp. 1069-1077, Springer</em>
                         <br>
                         <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[PDF]</a>
                         /
@@ -216,19 +216,6 @@
                   </tbody>
                </table>
 
-
-                 <table
-              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:20px;">
-              <tbody>
-                <tr>
-                  <td style="padding:0px;width:100%;vertical-align:middle;text-align:left;padding-left:40px;">
-                    <heading>
-                      <font size="5">2023</font>
-                    </heading>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
    
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff;margin-bottom:60px;">
@@ -244,7 +231,7 @@
                         <br>
                         <strong>T. K. Dutta</strong>, D. R. Nayak, Y.D. Zhang
                         <br>
-                        <em>In Biomedical Signal Processing and Control, 2023</em>
+                        <em>In Biomedical Signal Processing and Control, vol. 87, Elsevier</em>
                         <br>
                         <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[PDF]</a>
                         /
